# lalo

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  Cargo.toml  Functor.hs  LICENSE  blabla.lalo  ideas.md  lalo.cabal  test.lalo
app/: Main.hs
examples/: test.lalo  test1.lalo  test2.lalo
lalo/: Cargo.toml  hir.txt
lalo-cli/: Cargo.toml
lalo-cli/src/: main.rs
lalo/src/: ast.rs  lexer.rs  lib.rs  token.rs
src/: Lalo.hs  ast.rs  calculator1.rs  error.rs  lexer.rs  main.rs  parser.rs  source.rs  token.rs  traits.rs
src/Lalo/: Bidir.hs  Eval.hs  Infer.hs  Input.hs  Lexer.x  Location.hs  Parser.hs  Parser.y  Pretty.hs  Syntax.hs  Type.hs
src/Lalo/Parser/: Monad.hs  Span.hs  Token.hs
