[package]
name = "lalo-rust"
version = "0.1.0"
authors = ["mauro <maurobalbi@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
thiserror = "1.0.20"