cabal-version:      2.4
name:               lalo
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Mauro Balbi
maintainer:         maurobalbi@bluewin.ch

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lalo
                    , Lalo.Syntax
                    , Lalo.Infer
                    , Lalo.Type
                    , Lalo.Location
                    , Lalo.Pretty
                    , Lalo.Parser
                    , Lalo.Eval

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , containers
                    , array
                    , mtl
                    , megaparsec
                    , text
                    , template-haskell
                    , scientific
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , parser-combinators
    hs-source-dirs:   src
    default-language: GHC2021

executable lalo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0
      , haskeline
      , transformers
      , mtl
      , text
      , lalo

    hs-source-dirs:   app
    default-language: GHC2021

test-suite lalo-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base ^>=4.16.1.0

